--- a/SaraiManagement/Views/ItemDoado/Create.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Create.cshtml
@@ -11,7 +11,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
-        <div class="form-group">
+        <div  style="visibility:hidden" class="form-group" >
             <label asp-for="@Model.DoacaoID" class="control-label"></label>
             <select asp-for="@Model.DoacaoID">
                 <option>@((ViewBag.DoacaoID as SelectList).Count())</option>
