--- a/SaraiManagement/Views/ItemDoado/List.cshtml
+++ b/SaraiManagement/Views/ItemDoado/List.cshtml
@@ -49,14 +49,12 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Tem certeza que deseja concluir a doação?</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <h5 class="modal-title" id="exampleModalLabel">
+                    Doaçao Concluida com sucesso!
+                </h5>
+
             </div>
-            <div class="modal-body">
-                Doaçao Concluida com sucesso!
-            </div>
+
             <div class="modal-footer">
                 <a class="btn btn-primary" asp-action="Index" asp-controller="TelaInicial" clas> OK </a>
             </div>
