--- a/SaraiManagement/Views/Doacao/List.cshtml
+++ b/SaraiManagement/Views/Doacao/List.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <h1>Lista de Doaçoes</h1>
 <br />
 
@@ -13,14 +14,15 @@
     <p>
         <h4>Pesquisar Doaçoes por Donatario:</h4>
         <input type="text" name="SearchString" />
-        <input class="btn btn-primary" type="submit" value="Pesquisar" />
+        <input type="submit" class="btn btn-primary" value="Pesquisar" />
+
     </p>
 </form>
 
 
 
 
-<table class="table">
+<table class="table" >
     <thead>
         <tr>
             <th>
