--- a/SaraiManagement/Views/Movimentacao/Consultar.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Consultar.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.DataMovimentacao)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataMovimentacao)
+            @Html.DisplayFor(model => model.DataMovimentacao.ToString("d"))
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descricao)
