--- a/SaraiManagement/Views/Movimentacao/List.cshtml
+++ b/SaraiManagement/Views/Movimentacao/List.cshtml
@@ -15,7 +15,7 @@
             </h4>
         </div>
         <div class="card-text p-1">@m.TipoMovimentacao</div>
-        <div class="card-text p-1">@m.DataMovimentacao</div>
+        <div class="card-text p-1">@m.DataMovimentacao.ToString("d")</div>
     </div>
 }
 <div page-model="@Model.PagingInfo" page-action="List" page-classes-enabled="true"
