--- a/SaraiManagement/Views/Aluno/Delete.cshtml
+++ b/SaraiManagement/Views/Aluno/Delete.cshtml
@@ -5,76 +5,94 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Deletar</h1>
+<style>
+    .centraliza {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-<h3>Tem certeza que deseja excluir?</h3>
-<div>
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataNascimento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataNascimento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Escola)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Escola)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ano)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ano)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Endereco)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Endereco)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cidade)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cidade)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NomeResponsavel)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NomeResponsavel)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Periodo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Periodo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Admissao)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Admissao)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Donatario)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Donatario.Nome)
-        </dd class>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="AlunoID" />
-        <input type="submit" value="Excluir" class="btn btn-danger" />
-        <a asp-action="Details" asp-route-id="@Model.AlunoID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
-    </form>
+    .botao {
+        margin: 0 5px;
+    }
+
+    .fonte {
+        font-size: 20px;
+    }
+</style>
+
+<h1 style="text-align:center;">Tem certeza que deseja excluir?</h1>
+<hr />
+<div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center; ">
+    <div style="padding: 0 0 0 35%;">
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Nome)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Nome)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.DataNascimento)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.DataNascimento)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Escola)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Escola)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Ano)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Ano)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Endereco)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Endereco)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Cidade)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Cidade)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.NomeResponsavel)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.NomeResponsavel)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Periodo)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Periodo)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Admissao)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Admissao)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Donatario)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Donatario.Nome)
+            </dd>
+        </dl>
+    </div>
 </div>
+
+<hr />
+<form class="centraliza" asp-action="Delete">
+    <input type="hidden" asp-for="AlunoID" />
+    <input type="submit" value="Excluir" class="btn btn-danger" />
+    <a asp-action="Details" asp-route-id="@Model.AlunoID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
+</form>
